[package]
name = "hayashi"
version = "1.0.0"
edition = "2021"
description = "A Rust-based diagramming-as-code API that allows you to turn your .tfstate file into details architecture boundary diagrams. "
homepage = "https://www.usenabla.com"
repository = "https://github.com/usenabla-com/nabla-cli"
authors = ["usenabla-com"]

[dependencies]
# Core dependencies
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Web framework
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }

# Additional dependencies
petgraph = "0.6"
reqwest = { version = "0.12", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }